# autogui_rs

./: .rustfmt.toml
autogui_core/: Cargo.toml
autogui_core/src/: error.rs  lib.rs
autogui_core/src/controller/: adb.rs  mod.rs
autogui_js/: Cargo.toml
autogui_js/scripts/: index.js  jsconfig.json
autogui_js/scripts/type/: index.d.ts
autogui_js/src/: builtin.rs  js_adb.rs  js_image.rs  js_math.rs  lib.rs
