[package]
name = "autogui_js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = "0.17.0"
boa_runtime = "0.17.0"
autogui_core ={ path = "../autogui_core"}
boa_gc = "0.17.0"
image = "0.24.7"
imageproc = { version = "0.23.0", features = ["display-window"] }
opencv = "0.84.5"